Work on Frontend Templates

--- a/school_management/StaticsFiles/Styles/Admin_Dashboard.css
+++ b/school_management/StaticsFiles/Styles/Admin_Dashboard.css
@@ -530,7 +530,8 @@ button:hover {
                 }
 
                 >input[type=text],
-                input[type=tel] {
+                input[type=tel]
+                {
                     width: 100%;
                     /* padding: 12px 20px; */
                     margin: 0px 0;
