--- a/school_management/Templates/Student_Table.html
+++ b/school_management/Templates/Student_Table.html
@@ -20,8 +20,11 @@
             <td>8532800542</td>
             <td>VII</td>
             <td><a href=""><span class="material-symbols-outlined">
-                visibility
-            </span></a>
+                        visibility
+                    </span></a>
+                <span class="material-symbols-outlined">
+                    edit_note
+                </span>
                 <span class="material-symbols-outlined">
                     delete
                 </span>
@@ -36,8 +39,12 @@
             <td>8532800542</td>
             <td>VII</td>
             <td><a href=""><span class="material-symbols-outlined">
-                visibility
-            </span></a>
+                        visibility
+                    </span></a>
+                <span class="material-symbols-outlined">
+                    edit_note
+                </span>
+
                 <span class="material-symbols-outlined">
                     delete
                 </span>
@@ -52,8 +59,11 @@
             <td>8532800542</td>
             <td>VII</td>
             <td><a href=""><span class="material-symbols-outlined">
-                visibility
-            </span></a>
+                        visibility
+                    </span></a>
+                <span class="material-symbols-outlined">
+                    edit_note
+                </span>
                 <span class="material-symbols-outlined">
                     delete
                 </span>
