--- a/school_management/Templates/Admin_Student.html
+++ b/school_management/Templates/Admin_Student.html
@@ -37,39 +37,7 @@
                 <button id="add_pop_button">+ Add Student</button>
             </div>
         </div>
-
-        <div class="popup-wrapper">
-
-            <div class="popup">
-
-                <div class="popup-close">X</div>
-
-                <div class="popup-content">
-                    <h4>FILL THE FORM TO ADD NEW EMPLOYEE</h4>
-
-                  <form action="" method="POST">
-                    <label for="name">Name</label> 
-                    <input type="text" name="name"> 
-                    <label for="parent-name">Parent Name</label> 
-                    <input type="text" name="parent-name"> 
-                    <label for="contact">Contact</label>
-                    <input type="tel" name="contact" pattern="[6-9]{1}[0-9]{9}">
-                    <label for="city">City</label>
-                    <input type="text" name="city">
-                    <label for="role">Role</label>
-                    <input type="text" name="role">
-                    <label for="salary">Salary</label>
-                    <input type="text" name="salary">
-
-                    <button type="submit" value="add">Submit</button>
-
-                  </form>
-
-                </div>
-
-            </div>
-
-        </div>
+        {% include "Registration_Form/Student.html" %}
 
         {% include "Student_Table.html" %}
 
