--- a/school_management/Templates/Registration_Form/Student.html
+++ b/school_management/Templates/Registration_Form/Student.html
@@ -5,25 +5,23 @@
         <div class="popup-close">X</div>
 
         <div class="popup-content">
-            <h4>FILL THE FORM TO ADD NEW EMPLOYEE</h4>
+            <h4>FILL THE FORM TO ADD NEW TEACHER</h4>
 
           <form action="" method="POST">
             {% csrf_token %}
             <label for="name">Name</label> 
-            <input type="text" name="name"> 
+            <input type="text" name="name">
             <label for="parent-name">Parent Name</label> 
             <input type="text" name="parent-name"> 
+            <label for="class">Class</label>
+            <input type="text" name="class">
             <label for="contact">Contact</label>
             <input type="tel" name="contact" pattern="[6-9]{1}[0-9]{9}">
             <label for="city">City</label>
             <input type="text" name="city">
-            <label for="role">Role</label>
-            <input type="text" name="role">
-            <label for="salary">Salary</label>
-            <input type="text" name="salary">
-
+            <label for="image">Image</label> <br>
+            <input type="file" name="image">
             <button type="submit" value="add">Submit</button>
-
           </form>
 
         </div>
