--- a/practice_website/Templates/Gallery.html
+++ b/practice_website/Templates/Gallery.html
@@ -1,17 +1,5 @@
-{% load static %}
+{% extends "index.html" %}
 
-<!DOCTYPE html>
-
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery</title>
-    <link rel="stylesheet" href="{% static 'Style/Navbar.css' %}">
-</head>
-<body>
-    {% include "Navbar.html" %}
-
-    {% include "Footer.html" %}
-</body>
-</html>
+{% block heading %}
+  <h1>This is Gallery Page</h1>
+{% endblock %}
