--- a/practice_website/Templates/Home.html
+++ b/practice_website/Templates/Home.html
@@ -2,16 +2,19 @@
 
 {% block heading %}
 <h1>This is Home page</h1>
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Enter Name</label>
-  <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="xyzname">
-
+<form action="" class="w-50 shadow p-3 " method="POST" enctype="multipart/form-data">
+  {% csrf_token %}
+  <div class="mb-3">
+    <label for="exampleFormControlInput1" class="form-label">Enter Name</label>
+    <input type="text" name="username" class="form-control" id="exampleFormControlInput1" placeholder="xyzname">
+  
+  </div>
   <div class="mb-3">
     <label for="formFile" class="form-label">Default file input example</label>
-    <input class="form-control" type="file" id="formFile">
+    <input class="form-control" name="userimage" type="file" id="formFile">
   </div>
-</div>
+  <div class="col-12">
+    <button class="btn btn-primary" type="submit">Submit form</button>
+  </div>
+</form>
 {% endblock %}
-
-
-
