--- a/add_notes_project/Templates/Account/login.html
+++ b/add_notes_project/Templates/Account/login.html
@@ -1,47 +1,28 @@
-{% load static %}
+{% extends "Pages/index.html" %}
 
-<!DOCTYPE html>
-<html lang="en">
+{% block content %}
+<div class="login h-100 d-flex align-items-center justify-content-center">
+    <div class="col-4 shadow p-4">
+        <form action="" method="post">
+            {% csrf_token %}
+            <legend class="text-center mb-4">Login Here...</legend>
+            <div class="mb-3">
+                <!-- <label for="username" class="form-label">User name</label> -->
+                <input type="text" class="form-control" id="username" aria-describedby="userHelp" placeholder="username"
+                    required>
+                <div id="userHelp" class="form-text">We'll never share your username with anyone else.</div>
+            </div>
+            <div class="mb-3">
+                <!-- <label for="password" class="form-label">Password</label> -->
+                <input type="password" class="form-control" id="password" placeholder="password" required>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Login</button>
+        </form>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <p class="mt-4 mb-0 text-center fw-bold"><a href="{% url 'signup' %}"
+                class="text-dark text-decoration-none">Create new Account</a></p>
 
-    <link rel="stylesheet" href=" {% static 'Styles/Account.css' %}">
-</head>
-
-<body>
-
-    <div class="login h-100 d-flex align-items-center justify-content-center">
-        <div class="col-4 shadow p-4">
-            <form action="" method="post">
-                {% csrf_token %}
-                <legend class="text-center mb-4">Login Here...</legend>
-                <div class="mb-3">
-                    <!-- <label for="username" class="form-label">User name</label> -->
-                    <input type="text" class="form-control" id="username" aria-describedby="userHelp" placeholder="username" required>
-                    <div id="userHelp" class="form-text">We'll never share your username with anyone else.</div>
-                </div>
-                <div class="mb-3">
-                    <!-- <label for="password" class="form-label">Password</label> -->
-                    <input type="password" class="form-control" id="password" placeholder="password" required>
-                </div>
-                <button type="submit" class="btn btn-primary w-100">Login</button>
-            </form>
-
-            <p class="mt-4 mb-0 text-center fw-bold"><a href="{% url 'signup' %}" class="text-dark text-decoration-none">Create new Account</a></p>
-
-        </div>
     </div>
+</div>
 
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-</body>
-
-</html>
+{% endblock %}
