Add Notes Project

--- a/add_notes_project/Templates/Account/login.html
+++ b/add_notes_project/Templates/Account/login.html
@@ -10,12 +10,12 @@
                 <div class="mb-3">
                     <!-- <label for="username" class="form-label">User name</label> -->
                     <input type="text" class="form-control" id="username" aria-describedby="userHelp" placeholder="username"
-                        required>
+                      name="username"  required>
                     <div id="userHelp" class="form-text">We'll never share your username with anyone else.</div>
                 </div>
                 <div class="mb-3">
                     <!-- <label for="password" class="form-label">Password</label> -->
-                    <input type="password" class="form-control" id="password" placeholder="password" required>
+                    <input type="password" name="password" class="form-control" id="password" placeholder="password" required>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Login</button>
             </form>
