--- a/add_notes_project/Templates/Pages/Home.html
+++ b/add_notes_project/Templates/Pages/Home.html
@@ -1,11 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Notes</title>
-</head>
-<body>
-    
-</body>
-</html>
+{% extends "Pages/index.html" %}
+
+
+{% block content %}
+<nav class="navbar bg-dark border-bottom navbar-expand-lg"  data-bs-theme="dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'home' %}">Add Notes</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
+            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Account</a>
+                </li>
+            </ul>
+            <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+
+            <div class="text-light d-flex align-items-center justify-content-center">
+                <span class="material-symbols-outlined">
+                    account_circle
+                    </span>
+                    <h4>Abhishek</h4>
+            </div>
+        </div>
+    </div>
+</nav>
+{% endblock %}
