--- a/add_notes_project/Templates/Pages/Home.html
+++ b/add_notes_project/Templates/Pages/Home.html
@@ -2,34 +2,25 @@
 
 
 {% block content %}
-<nav class="navbar bg-dark border-bottom navbar-expand-lg"  data-bs-theme="dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">Add Notes</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Account</a>
-                </li>
-            </ul>
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
 
-            <div class="text-light d-flex align-items-center justify-content-center">
-                <span class="material-symbols-outlined">
-                    account_circle
-                    </span>
-                    <h4>Abhishek</h4>
+{% include "Pages/navbar.html" %}
+
+<section class="mt-5">
+    <div class="d-flex justify-content-center align-items-center">
+        <form action="" method="post" class="col-5 shadow p-4">
+            {% csrf_token %}
+            <legend class="text-center mb-4">Add New Note</legend>
+            <div class="mb-3">
+
+                <input type="text" class="form-control" id="username" aria-describedby="userHelp" placeholder="title"
+                    name="Title" autofocus>
             </div>
-        </div>
+            <div class="mb-3">
+                <textarea class="form-control" placeholder="Description" id="floatingTextarea" rows=3></textarea>
+            </div>
+            <button class="btn btn-primary w-100">ADD</button>
+        </form>
     </div>
-</nav>
+</section>
+
 {% endblock %}
