--- a/add_notes_project/Templates/Pages/index.html
+++ b/add_notes_project/Templates/Pages/index.html
@@ -38,6 +38,7 @@
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 
+        <script src="{% static 'JavaScript/index.js' %}"></script>
 </body>
 
 </html>
