--- a/add_notes_project/StaticFiles/Styles/Account.css
+++ b/add_notes_project/StaticFiles/Styles/Account.css
@@ -18,6 +18,54 @@ textarea{
     resize: none;
 }
 
-#exampleModal{
+.popup-wrapper {
     display: none;
+    z-index: 9;
+    position: fixed;
+    width: 100%;
+    overflow: auto;
+    scrollbar-width: 0px;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.6);
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+}
+
+.popup-close {
+    position: relative;
+    text-align: right;
+    font-size: 25px;
+    font-weight: normal;
+    font-family: sans-serif;
+    cursor: context-menu;
+}
+
+/* Add Zoom Animation */
+.animate {
+    -webkit-animation: animatezoom 0.6s;
+    animation: animatezoom 0.6s
+}
+
+@-webkit-keyframes animatezoom {
+    from {
+        -webkit-transform: scale(0)
+    }
+
+    to {
+        -webkit-transform: scale(1)
+    }
+}
+
+@keyframes animatezoom {
+    from {
+        transform: scale(0)
+    }
+
+    to {
+        transform: scale(1)
+    }
 }
