--- a/add_notes_project/Templates/Pages/Update_Popup.html
+++ b/add_notes_project/Templates/Pages/Update_Popup.html
@@ -1,17 +1,24 @@
-<div id="exampleModal">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
+<div class="popup-wrapper" style="height: 100vh;">
+
+<div class="d-flex justify-content-center align-items-center h-100">
+    <div class="popup animate bg-light p-4 col-5">
+
+        <div class="popup-close text-end fs-4">X</div>
+
+        <form action="">
+            <legend class="text-center mb-4">Update Note</legend>
+            <div class="mb-3">
+
+                <input type="text" class="form-control" id="username" aria-describedby="userHelp" placeholder="title"
+                    name="Title">
+            </div>
+            <div class="mb-3">
+                <textarea class="form-control" placeholder="Description" id="floatingTextarea" rows=3></textarea>
+            </div>
+            <button class="btn btn-primary w-100">Update</button>
+        </form>
+
     </div>
-  </div>
+</div>
+
+</div>
