--- a/add_notes_project/Templates/Pages/display_notes.html
+++ b/add_notes_project/Templates/Pages/display_notes.html
@@ -10,11 +10,11 @@
         <div class="card-footer d-flex align-items-end justify-content-between">
             <p class="text-secondary">12/12/2023</p>
             <div class="action">
-                <button class="btn btn-sm btn-warning" id="delete_button"><span class="material-symbols-outlined" style="font-size: 18px;">
-                        delete
-                    </span></button>
-                <button class="btn btn-sm btn-danger"><span class="material-symbols-outlined"  style="font-size: 18px;">
+                <button class="btn btn-sm btn-warning" id="update_button"><span class="material-symbols-outlined"  style="font-size: 18px;">
                         edit_note
+                    </span></button>
+                <button class="btn btn-sm btn-danger" id="delete_button"><span class="material-symbols-outlined" style="font-size: 18px;">
+                        delete
                     </span></button>
             </div>
         </div>
