Add Notes Project

--- a/add_notes_project/Templates/Pages/Home.html
+++ b/add_notes_project/Templates/Pages/Home.html
@@ -16,7 +16,8 @@
                     name="title" autofocus>
             </div>
             <div class="mb-3">
-                <textarea name="description" class="form-control" placeholder="Description" id="floatingTextarea" rows=3></textarea>
+                <textarea name="description" class="form-control" placeholder="Description" id="floatingTextarea"
+                    rows=3></textarea>
             </div>
             <button class="btn btn-primary w-100">ADD</button>
         </form>
