--- a/add_notes_project/Templates/Pages/Update_Popup.html
+++ b/add_notes_project/Templates/Pages/Update_Popup.html
@@ -1,24 +1,19 @@
 <div class="popup-wrapper" style="height: 100vh;">
-
-<div class="d-flex justify-content-center align-items-center h-100">
-    <div class="popup animate bg-light p-4 col-5">
-
-        <div class="popup-close text-end fs-4">X</div>
-
-        <form action="">
-            <legend class="text-center mb-4">Update Note</legend>
-            <div class="mb-3">
-
-                <input type="text" class="form-control" id="username" aria-describedby="userHelp" placeholder="title"
-                    name="Title">
-            </div>
-            <div class="mb-3">
-                <textarea class="form-control" placeholder="Description" id="floatingTextarea" rows=3></textarea>
-            </div>
-            <button class="btn btn-primary w-100">Update</button>
-        </form>
-
+    <div class="d-flex justify-content-center align-items-center h-100">
+        <div class="popup animate bg-light p-4 col-5">
+            <div class="popup-close text-end fs-4">X</div>
+            <form action="" method="post">
+                <legend class="text-center mb-4">Update Note</legend>
+                <div class="mb-3">
+                    <input type="text" class="form-control" id="username" aria-describedby="userHelp"
+                        placeholder="Title" name="title" value="{{note.title}}">
+                </div>
+                <div class="mb-3">
+                    <textarea class="form-control" value="{{note.description}}" name="description"
+                        placeholder="Description" id="floatingTextarea" rows=3></textarea>
+                </div>
+                <button class="btn btn-primary w-100" type="submit">Update</button>
+            </form>
+        </div>
     </div>
-</div>
-
 </div>
