--- a/add_notes_project/StaticFiles/Styles/Account.css
+++ b/add_notes_project/StaticFiles/Styles/Account.css
@@ -7,7 +7,7 @@ body {
 }
 
 .login {
-    background-image: url("/StaticFiles/Images/Login_background.jpg");
+    background-image: url("../Images/Login_background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
