--- a/school_management/Templates/Registration_Form/Teacher.html
+++ b/school_management/Templates/Registration_Form/Teacher.html
@@ -11,14 +11,22 @@
             {% csrf_token %}
             <label for="name">Name</label> 
             <input type="text" name="name">
+
+            <label for="dob">Date Of Birth</label> 
+            <input type="date" name="dob"> <br>
+            
             <label for="qualification">Qualification</label> 
             <input type="text" name="qualification">
+            
             <label for="contact">Contact</label>
             <input type="tel" name="contact" pattern="[6-9]{1}[0-9]{9}">
+            
             <label for="subject">Subject</label>
             <input type="text" name="subject"> 
+            
             <label for="salary">Salary</label>
             <input type="text" name="salary">
+            
             <label for="image">Image</label> <br>
             <input type="file" name="image">
             <button type="submit" value="add">Submit</button>
