Add Notes Project

--- a/add_notes_project/Templates/Account/Register.html
+++ b/add_notes_project/Templates/Account/Register.html
@@ -3,11 +3,11 @@
 {% block content %}
 
 <div style="height: 100vh;">
-    <div class="h-100 d-flex justify-content-center align-items-center">
-        <div class="shadow col-4 p-4">
+    <div class="register h-100 d-flex justify-content-center align-items-center">
+        <div class="shadow border bg-light col-4 p-4">
             <form action=" {% url 'signup' %}" method="post" autocomplete="off">
                 {% csrf_token %}
-                <legend class="text-center mb-4">Register Here...</legend>
+                <legend class="text-center text-dark mb-4">Register Here...</legend>
                 <div class="mb-3">
                     <!-- <label for="username" class="form-label">User name</label> -->
                     <input type="email" class="form-control" name="email" placeholder="email" autofocus required>
@@ -27,6 +27,8 @@
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Register</button>
             </form>
+            <p class="mt-4 mb-0 text-center text-dark fw-bold"><a href="{% url 'login' %}"
+                class="text-dark text-decoration-none">Already have a Account, click here</a></p>
         </div>
     </div>
 </div>
