--- a/add_notes_project/StaticFiles/Styles/Account.css
+++ b/add_notes_project/StaticFiles/Styles/Account.css
@@ -6,31 +6,32 @@ body {
     height: 100vh;
 }
 
+
 .login {
     background-image: url("../Images/Login_background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
-
+.register {
+    background-image: url("../Images/Register_background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
 
 textarea {
     resize: none;
 }
 
 .popup-wrapper {
-    display: none;
-    z-index: 9;
-    position: fixed;
+
     width: 100%;
     overflow: auto;
     scrollbar-width: 0px;
-    top: 0;
-    left: 0;
     height: 100%;
-    background-color: rgb(0, 0, 0);
+
     /* Fallback color */
-    background-color: rgba(0, 0, 0, 0.6);
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
 }
@@ -44,28 +45,8 @@ textarea {
     cursor: context-menu;
 }
 
-/* Add Zoom Animation */
-.animate {
-    -webkit-animation: animatezoom 0.6s;
-    animation: animatezoom 0.6s
+.popup-wrapper #desc{
+    height: 3rem;
 }
 
-@-webkit-keyframes animatezoom {
-    from {
-        -webkit-transform: scale(0)
-    }
 
-    to {
-        -webkit-transform: scale(1)
-    }
-}
-
-@keyframes animatezoom {
-    from {
-        transform: scale(0)
-    }
-
-    to {
-        transform: scale(1)
-    }
-}
