--- a/add_notes_project/Templates/Account/login.html
+++ b/add_notes_project/Templates/Account/login.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div style="height: 100vh;">
     <div class="login h-100 d-flex align-items-center justify-content-center">
-        <div class="col-4 shadow p-4">
+        <div class="col-4 shadow border p-4 bg-light">
             <form action="{% url 'login' %}" method="post">
                 {% csrf_token %}
                 <legend class="text-center mb-4">Login Here...</legend>
@@ -20,7 +20,7 @@
                 <button type="submit" class="btn btn-primary w-100">Login</button>
             </form>
     
-            <p class="mt-4 mb-0 text-center fw-bold"><a href="{% url 'signup' %}"
+            <p class="mt-4 mb-0 text-center text-dark fw-bold"><a href="{% url 'signup' %}"
                     class="text-dark text-decoration-none">Create new Account</a></p>
     
         </div>
