Schhol Management Project

--- a/school_management/Templates/Admin_uNabvar.html
+++ b/school_management/Templates/Admin_uNabvar.html
@@ -24,7 +24,7 @@
                 </span>
             </div>
             <div class="name">
-                <p>Abhishek</p>
+                <p>{{Teacher.Name}}</p>
             </div>
         </div>
     </div>
