--- a/school_management/Templates/Registration_Form/Student.html
+++ b/school_management/Templates/Registration_Form/Student.html
@@ -11,6 +11,8 @@
             {% csrf_token %}
             <label for="name">Name</label> 
             <input type="text" name="name">
+            <label for="dob">Date of Birth</label>
+            <input type="date" name="dob">
             <label for="parent-name">Parent Name</label> 
             <input type="text" name="parent-name"> 
             <label for="class">Class</label>
