Schhol Management Project

--- a/school_management/Templates/Student/Student_navbar.html
+++ b/school_management/Templates/Student/Student_navbar.html
@@ -8,8 +8,8 @@
             <span class="material-symbols-outlined">
                 account_circle
                 </span>
-            <p>Abhishek</p>
+            <p>{{Student.Name}}</p>
         </div>
-        <button><a href="">Logout</a></button>
+        <button><a href="{% url 'student_logout' %}">Logout</a></button>
     </div>
 </nav>
