--- a/school_management/Templates/login.html
+++ b/school_management/Templates/login.html
@@ -40,7 +40,7 @@
             </form>
 
             <a href="" class="f-password">Forget password</a> <br>
-            <a href="{% url 'signup' %}" class="n-account">Create new account</a>
+            <!-- <a href="{% url 'signup' %}" class="n-account">Create new account</a> -->
         </div>
     </div>
 </body>
